feat: Implement WebSocket real-time messaging infrastructure
✅ Phase 5.7 WebSocket Real-time Testing Complete

🚀 New Features:
- WebSocketConfig: Complete STOMP configuration with message brokers and converters
- WebSocket endpoints: /ws with SockJS fallback support
- RealTimeAggregationService: Kafka listener publishing to WebSocket topics
- Integration testing: Comprehensive WebSocket messaging validation

🔧 Technical Details:
- Added spring-boot-starter-websocket dependency to device-service
- WebSocket destination: /topic/sites/{siteId}/dashboard
- MQTT → Kafka → WebSocket pipeline validated end-to-end
- Test configurations for embedded WebSocket testing

📈 Integration Pipeline:
MQTT telemetry → DeviceTelemetryProcessor → Kafka → RealTimeAggregationService → WebSocket broadcast

🧪 Testing:
- WebSocketRealTimeIntegrationTest: Validates complete MQTT-to-WebSocket flow
- TestWebSocketConfig: Embedded WebSocket test configuration
- Embedded MQTT broker integration for realistic testing

⚠️ Current Limitations:
- WebSocket messages contain basic metadata only (siteId, timestamp, type)
- Rich telemetry data (BMS, Solar, EV metrics) not yet included in broadcasts
- Frontend integration pending

🎯 Next: Extend WebSocket data structure to support comprehensive EMS dashboard

--- a/backend/device-service/pom.xml
+++ b/backend/device-service/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- WebSocket for real-time updates -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
