fix: Add count-repo-stats.sh to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,8 @@ htmlcov/
 *.temp
 .cache/
 .parcel-cache/
+
+# =====================================================
+# Miscellaneous
+# =====================================================
+count-repo-stats.sh
