feat: Complete Phase 5.8 - MQTT Telemetry Data Pipeline Testing
✅ End-to-End Pipeline Implementation
- Enhanced DeviceTelemetryProcessor with topic pattern parsing (ecogrid/site{N}/{deviceType}/{deviceId})
- Added generic telemetry handling preserving all sensor data in JSON format
- Implemented MqttConnectionService with automatic reconnection and health monitoring
- Enhanced DeviceMqttCallback with structured topic parsing and device identification

✅ MQTT Integration Enhancements
- Production-ready MQTT configuration with Docker container deployment
- Health check endpoint (/api/v1/devices/mqtt/status) for connectivity monitoring
- Enhanced MqttConfig with error handling and reconnection logic
- Added @EnableScheduling to DeviceServiceApplication for periodic health checks

✅ Database Verification
- Successfully tested with 40 devices across 10 sites (20 BMS, 10 Solar, 10 EV Charger)
- 160+ telemetry records stored with proper JSONB data preservation
- PostgreSQL queries optimized for non-interactive mode
- Foreign key relationships maintained between devices, sites, and telemetry records

✅ Testing Infrastructure
- MQTT telemetry simulator script for realistic device data generation
- Database seeding scripts with comprehensive test data
- Docker health checks and container dependency management
- Fixed docker-compose.yml health check URLs

✅ Documentation Updates
- Updated Project.md with Phase 5.8 completion (90% Phase 5 progress)
- Comprehensive technical achievements and file change documentation
- Updated progress metrics and next phase priorities

--- a/backend/device-service/src/main/resources/application.yml
+++ b/backend/device-service/src/main/resources/application.yml
@@ -42,6 +42,7 @@ mqtt:
   client-id: ${MQTT_CLIENT_ID:device-service}
   username: ${MQTT_USERNAME:ems_mqtt}
   password: ${MQTT_PASSWORD:ems_mqtt_password}
+  topic-pattern: "ecogrid/+/+/+"
   topics:
     telemetry: "ems/+/+/telemetry"
     commands: "ems/+/+/commands"
