--- a/infrastructure/docker/Dockerfile.frontend
+++ b/infrastructure/docker/Dockerfile.frontend
@@ -20,6 +20,9 @@ FROM nginx:1.28.0-alpine-slim
 # Copy built files from the builder stage
 COPY --from=builder /app/out /usr/share/nginx/html
 
+# Copy custom nginx config for SPA fallback
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Set permissions and ownership for static files
 RUN chmod -R 755 /usr/share/nginx/html && chown -R nginx:nginx /usr/share/nginx/html
 
