--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,13 +145,7 @@ services:
       redis:
         condition: service_healthy
       auth-service:
-        condition: service_started
-      device-service:
-        condition: service_started
-      analytics-service:
-        condition: service_started
-      notification-service:
-        condition: service_started
+        condition: service_healthy
     healthcheck:
       test:
         [
@@ -160,7 +154,7 @@ services:
           "--no-verbose",
           "--tries=1",
           "--spider",
-          "http://localhost:8080/actuator/health",
+          "http://localhost:8080/api/auth/health",
         ]
       interval: 30s
       timeout: 10s
@@ -232,18 +226,16 @@ services:
       postgres:
         condition: service_healthy
       mosquitto:
-        condition: service_started
+        condition: service_healthy
       kafka:
         condition: service_healthy
     healthcheck:
       test:
         [
           "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:8082/actuator/health",
+          "sh",
+          "-c",
+          "wget --no-verbose --tries=1 --spider http://localhost:8082/api/v1/devices/health && wget --no-verbose --tries=1 --spider http://localhost:8082/api/v1/sites/health",
         ]
       interval: 30s
       timeout: 10s
