--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react-map-gl": "^6.1.7",
     "axios": "^1.12.2",
@@ -19,7 +20,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -30,9 +32,11 @@
     "@types/react-icons": "^2.2.7",
     "@types/react-modal": "^3.16.3",
     "@types/recharts": "^1.8.29",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.0-canary.51",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
