feat: Add Nginx location blocks for network, analytics, apidocs, and compute routes

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,38 @@ http {
             try_files /ems.html =404;
         }
 
+        location = /network {
+            try_files /network.html =404;
+        }
+
+        location /network {
+            try_files /network.html =404;
+        }
+
+        location = /analytics {
+            try_files /analytics.html =404;
+        }
+
+        location /analytics {
+            try_files /analytics.html =404;
+        }
+
+        location = /apidocs {
+            try_files /apidocs.html =404;
+        }
+
+        location /apidocs {
+            try_files /apidocs.html =404;
+        }
+
+        location = /compute {
+            try_files /compute.html =404;
+        }
+
+        location /compute {
+            try_files /compute.html =404;
+        }
+
         # Default SPA fallback for other routes
         location / {
             try_files $uri $uri/ /index.html;
