--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,5 @@ htmlcov/
 # Miscellaneous
 # =====================================================
 count-repo-stats.sh
+docker-compose.caddy.yml
+Caddyfile
