--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -124,12 +124,12 @@ services:
   # Backend Services
   api-gateway:
     build:
-      context: ./backend
-      dockerfile: ../infrastructure/docker/Dockerfile.combined-service
-    image: ghcr.io/kgonidisorg/ems:services
+      context: ./backend/api-gateway
+      dockerfile: ../../infrastructure/docker/Dockerfile.api-gateway
     container_name: ems-api-gateway
+    ports:
+      - "8080:8080"
     environment:
-      - APPLICATION_TYPE=api-gateway
       - SPRING_PROFILES_ACTIVE=docker
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -141,8 +141,6 @@ services:
       - ANALYTICS_SERVICE_PORT=8083
       - NOTIFICATION_SERVICE_HOST=notification-service
       - NOTIFICATION_SERVICE_PORT=8084
-    ports:
-      - "8080:8080"
     depends_on:
       redis:
         condition: service_healthy
@@ -167,10 +165,13 @@ services:
       - all
 
   auth-service:
-    image: ghcr.io/kgonidisorg/ems:services
+    build:
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.auth-service
     container_name: ems-auth-service
+    ports:
+      - "8081:8081"
     environment:
-      - APPLICATION_TYPE=auth-service
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -178,8 +179,6 @@ services:
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
       - REDIS_HOST=redis
-    ports:
-      - "8081:8081"
     depends_on:
       postgres:
         condition: service_healthy
@@ -204,10 +203,13 @@ services:
       - all
 
   device-service:
-    image: ghcr.io/kgonidisorg/ems:services
+    build:
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.device-service
     container_name: ems-device-service
+    ports:
+      - "8082:8082"
     environment:
-      - APPLICATION_TYPE=device-service
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -220,8 +222,6 @@ services:
       - MQTT_CLIENT_ID=device-service
       - MQTT_USERNAME=ems_mqtt
       - MQTT_PASSWORD=ems_mqtt_password
-    ports:
-      - "8082:8082"
     depends_on:
       postgres:
         condition: service_healthy
@@ -246,18 +246,19 @@ services:
       - all
 
   analytics-service:
+    build:
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.analytics-service
     container_name: ems-analytics-service
-    image: ghcr.io/kgonidisorg/ems:services
+    ports:
+      - "8083:8083"
     environment:
-      - APPLICATION_TYPE=analytics-service
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_NAME=ems_analytics
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
-    ports:
-      - "8083:8083"
     depends_on:
       postgres:
         condition: service_healthy
@@ -280,10 +281,13 @@ services:
       - all
 
   notification-service:
+    build:
+      context: ./backend
+      dockerfile: ../infrastructure/docker/Dockerfile.notification-service
     container_name: ems-notification-service
-    image: ghcr.io/kgonidisorg/ems:services
+    ports:
+      - "8085:8084"
     environment:
-      - APPLICATION_TYPE=notification-service
       - SPRING_PROFILES_ACTIVE=docker
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -296,8 +300,6 @@ services:
       - MAIL_PORT=1025
       - MAIL_USERNAME=
       - MAIL_PASSWORD=
-    ports:
-      - "8084:8084"
     depends_on:
       postgres:
         condition: service_healthy
@@ -323,12 +325,28 @@ services:
 
   # Frontend service for local development
   frontend:
-    image: ghcr.io/kgonidisorg/ems:latest
+    build:
+      context: ./frontend
+      dockerfile: ../infrastructure/docker/Dockerfile.frontend
     container_name: ems-frontend
     ports:
-      - "3002:80"
+      - "3000:80"
     depends_on:
       - api-gateway
+    profiles:
+      - frontend
+      - all
+
+  caddy:
+    image: caddy:latest
+    container_name: ems-caddy
+    ports:
+      - "80:80"
+    volumes:
+      - ./infrastructure/docker/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    restart: unless-stopped
     profiles:
       - frontend
       - all
@@ -341,3 +359,5 @@ volumes:
   zookeeper_data:
   zookeeper_logs:
   kafka_data:
+  caddy_data:
+  caddy_config:
