--- a/infrastructure/docker/Dockerfile.generator
+++ b/infrastructure/docker/Dockerfile.generator
@@ -11,6 +11,16 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy simulator script
 COPY seed_telemetry.py ./seed_telemetry.py
+COPY weekly_db_cleanup.py ./weekly_db_cleanup.py
 
-# Entrypoint for telemetry publishing
-CMD ["python", "seed_telemetry.py"]
+ENV PYTHONUNBUFFERED=1
+
+ENTRYPOINT ["sh", "-c", "\
+  if [ \"$APPLICATION_TYPE\" = \"telemetry_publisher\" ]; then \
+  python ./seed_telemetry.py; \
+  elif [ \"$APPLICATION_TYPE\" = \"db_cleanup\" ]; then \
+  python ./weekly_db_cleanup.py; \
+  else \
+  echo 'Unknown APPLICATION_TYPE'; exit 1; \
+  fi \
+  "]
