fix: update ARG and ENV variables in frontend Dockerfile to use NEXT_PUBLIC_BASE_URL

--- a/infrastructure/docker/Dockerfile.frontend
+++ b/infrastructure/docker/Dockerfile.frontend
@@ -13,8 +13,9 @@ COPY next.config.ts tsconfig.json postcss.config.mjs eslint.config.mjs ./
 COPY public ./public
 COPY src ./src
 
-ARG NEXT_PUBLIC_API_URL=https://ems.kirongonidis.com
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ARG NEXT_PUBLIC_BASE_URL=https://ems.kirongonidis.com
+ENV NEXT_PUBLIC_BASE_URL=${NEXT_PUBLIC_BASE_URL}
+
 # Build the application
 RUN sh -c "npm rebuild esbuild && npm run build"
 
