--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,14 @@ services:
       - ./infrastructure/docker/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ems_user -d ems"]
-      interval: 10s
-      timeout: 5s
+      interval: 30s
+      timeout: 10s
       retries: 5
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - deps
       - backend
@@ -29,9 +34,14 @@ services:
       - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
+      interval: 60s
       timeout: 5s
       retries: 5
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - deps
       - backend
@@ -54,9 +64,14 @@ services:
           "-c",
           "mosquitto_pub -h localhost -t health/check -m 'test' -q 0 || exit 1",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - deps
       - backend
@@ -73,6 +88,10 @@ services:
     volumes:
       - zookeeper_data:/var/lib/zookeeper/data
       - zookeeper_logs:/var/lib/zookeeper/log
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - deps
       - backend
@@ -104,9 +123,14 @@ services:
           "localhost:9092",
           "--list",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 5
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - deps
       - backend
@@ -129,13 +153,14 @@ services:
       - ANALYTICS_SERVICE_PORT=8083
       - NOTIFICATION_SERVICE_HOST=notification-service
       - NOTIFICATION_SERVICE_PORT=8084
+      - LOG_LEVEL=WARN
     ports:
       - "8080:8080"
     depends_on:
       redis:
         condition: service_healthy
       auth-service:
-        condition: service_healthy
+        condition: service_started
     healthcheck:
       test:
         [
@@ -146,10 +171,14 @@ services:
           "--spider",
           "http://localhost:8080/api/auth/health",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - backend
       - all
@@ -166,6 +195,7 @@ services:
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
       - REDIS_HOST=redis
+      - LOG_LEVEL=WARN
     depends_on:
       postgres:
         condition: service_healthy
@@ -181,10 +211,14 @@ services:
           "--spider",
           "http://localhost:8081/api/v1/auth/health",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - backend
       - all
@@ -206,6 +240,7 @@ services:
       - MQTT_CLIENT_ID=device-service
       - MQTT_USERNAME=ems_mqtt
       - MQTT_PASSWORD=ems_mqtt_password
+      - LOG_LEVEL=WARN
     depends_on:
       postgres:
         condition: service_healthy
@@ -221,10 +256,14 @@ services:
           "-c",
           "wget --no-verbose --tries=1 --spider http://localhost:8082/api/v1/devices/health && wget --no-verbose --tries=1 --spider http://localhost:8082/api/v1/sites/health",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - backend
       - all
@@ -240,6 +279,7 @@ services:
       - DB_NAME=ems_analytics
       - DB_USERNAME=ems_user
       - DB_PASSWORD=ems_password
+      - LOG_LEVEL=WARN
     depends_on:
       postgres:
         condition: service_healthy
@@ -253,10 +293,14 @@ services:
           "--spider",
           "http://localhost:8083/api/v1/analytics/health",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - backend
       - all
@@ -278,6 +322,7 @@ services:
       - MAIL_PORT=1025
       - MAIL_USERNAME=
       - MAIL_PASSWORD=
+      - LOG_LEVEL=WARN
     depends_on:
       postgres:
         condition: service_healthy
@@ -293,10 +338,14 @@ services:
           "--spider",
           "http://localhost:8084/actuator/health",
         ]
-      interval: 30s
+      interval: 60s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - backend
       - all
@@ -309,6 +358,10 @@ services:
       - "3002:80"
     depends_on:
       - api-gateway
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - frontend
       - all
@@ -323,6 +376,10 @@ services:
     depends_on:
       mosquitto:
         condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - generator
       - all
@@ -340,6 +397,10 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
     profiles:
       - generator
       - all
