--- a/backend/device-service/src/main/resources/application.yml
+++ b/backend/device-service/src/main/resources/application.yml
@@ -60,4 +60,6 @@ management:
 # Logging
 logging:
   level:
-    com.ecogrid.ems.device: DEBUG
+    ROOT: ${LOG_LEVEL:WARN}
+  pattern:
+    console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
